# ngb

./: .gitignore  LICENSE.txt  README.md  default.nix  flake.nix  hm-module.nix  pyproject.toml
src/ngb/: __about__.py  __init__.py  ngb.py
src/ngb/modules/: __init__.py  bar.py  battery.py  bluetooth.py  config.py  disk.py  dropdownwindow.py  headset.py  hyprlandipc.py  ipc.py  namedtuples.py  network.py  niriipc.py  swayipc.py  volume.py  weather.py  widgetbox.py  windowmanageripc.py
src/ngb/modules/ipc_modules/: __init__.py  hyprlandipc.py  niriipc.py  swayipc.py  windowmanageripc.py
src/ngb/modules/weather_modules/: __init__.py  smhi.py  weatherbase.py  yr.py
src/ngb/types/: __init__.py  namedtuples.py
src/ngb/utils/: __init__.py  utils.py
src/ngb/widgets/: __init__.py  battery.py  bluetooth.py  clock.py  cpu.py  disk.py  headset.py  network.py  volume.py  weather.py  windowtitle.py  workspaces.py
src/pybar/: pybar.py
src/pybar/modules/: bar.py
src/pybar/widgets/: __init__.py  clock.py  disk.py  network.py  volume.py
tests/: __init__.py
