[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybar"
dynamic = ["version"]
description = 'Statusbar written in python using GTK4'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Emil Wendin", email = "nudelkurre@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pygobject",
  "screeninfo"
]

[project.scripts]
pybar = "pybar.pybar:main"

[project.urls]
Documentation = "https://github.com/nudelkurre/pybar#readme"
Issues = "https://github.com/nudelkurre/pybar/issues"
Source = "https://github.com/nudelkurre/pybar"

[tool.hatch.version]
path = "src/pybar/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pybar tests}"

[tool.coverage.run]
source_pkgs = ["pybar", "tests"]
branch = true
parallel = true
omit = [
  "src/pybar/__about__.py",
]

[tool.coverage.paths]
pybar = ["src/pybar", "*/pybar/src/pybar"]
tests = ["tests", "*/pybar/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
